always set overflow-x hidden (fixes #30)

--- a/app/frontend/foundation.scss
+++ b/app/frontend/foundation.scss
@@ -16,20 +16,14 @@
 
 html {
   min-height: 100vh;
-
-  @include small {
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
 }
 
 body {
   box-sizing: border-box;
   min-height: 100vh;
   background-color: $pearl;
-
-  @include small {
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
 }
 
 img,
